--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "arrow-parens": "off",
     "comma-dangle": "off",
     "indent": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "eol-last": "off"
 
   },
   "extends": ["eslint:recommended", "google"]
