--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
     "comma-dangle": "off",
     "indent": "off",
     "require-jsdoc": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "operator-linebreak": "off",
+    "max-len": "off",
+    "no-trailing-spaces": "off"
 
   },
   "extends": ["eslint:recommended", "google"]
